@@ -317,6 +317,13 @@ if (defined $info->field('multi-arch')){
     }
 }
 
+if ($type eq 'binary'){
+    if ($pkg =~ /^fonts-/) {
+        tag 'font-package-not-multi-arch-foreign'
+            unless $info->field ('multi-arch', 'no') =~ m/^foreign|allowed$/o;
+    }
+}
+
 #---- Architecture
 
 if (not defined $info->field('architecture')) {
