@@ -1,0 +1,2 @@
+font-multiarch-test.ttf usr/share/fonts/truetype
+font.ttf                usr/share/fonts/truetype
