@@ -1,0 +1,1 @@
+W: fonts-fields-font-not-multiarch-foreign: font-package-not-multi-arch-foreign
